--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.jboss.spec.javax.ws.rs</groupId>
             <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
-            <version>2.0.1.Final-redhat-00001</version>
+            <version>2.0.1.Final</version>
             <scope>provided</scope>
         </dependency>
 
